# pretix-email-template-plugin

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_email_template_plugin/: apps.py  signals.py
