[project]
name = "pretix-email-template-plugin"
dynamic = ["version"]
description = "Short description"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Your name", email = "your-email@example.org"},
]
maintainers = [
    {name = "Your name", email = "your-email@example.org"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_email_template_plugin = "pretix_email_template_plugin:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "GitHub repository URL"
repository = "GitHub repository URL"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_email_template_plugin.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
